# cmake_template

./: CMakeLists.txt
src/: CMakeLists.txt
src/drivers/: CMakeLists.txt
src/drivers/driver1/: CMakeLists.txt
src/drivers/driver1/inc/: driver1.h
src/drivers/driver1/src/: driver1.c
src/drivers/driver1/test/: CMakeLists.txt  test_driver1.c
src/main/: CMakeLists.txt  main.c
src/modules/: CMakeLists.txt
src/modules/module1/: CMakeLists.txt
src/modules/module1/inc/: module1.h
src/modules/module1/src/: module1.c
